# fast_llm_chat

./: README.md  pyproject.toml
example/: serve.sh
src/: cli_chat.py
